# N-Version-programming

./: README.md
src/: CMakeLists.txt  P1.c  P2.c  P3.c  decision_function.c  failure_manager.c  input_manager.c  makefile.txt  shared_file.txt  system_log.txt  voted_output.txt  watchdog.c
